# WildOakDealsApp

./: Makefile  add_user.py  emailCheck.py  generate_ui_test.py  main.py  pyproject.toml  recreate_db.py  replit.nix  requirements.txt  run_simple_test.py  run_tests.py  test_utils.py  userEmailUpdate.py
.github/workflows/: tests.yml
attached_assets/: Pasted-Database-tables-and-roles-created-successfully-Serving-Flask-app-main-Debug-mode-on-WARN-1740898687518.txt
migrations/versions/: d4e310cd5fac_initial_migration.py
static/css/: styles.css
templates/: deal_detail.html  home.html  login.html  register.html  requirements.txt
test_reports/: test_report_2025-03-02_06-49-30.txt  test_report_2025-03-02_06-51-34.txt  test_report_2025-03-02_06-53-03.txt  test_report_2025-03-02_06-55-21.txt  test_report_2025-03-02_07-27-55.txt  test_report_2025-03-02_07-31-26.txt
tests/: __init__.py  conftest.py  test_api.py  test_deal_detail.py  test_register.py  test_ui.py  test_ui_styling.py
