[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-sslify>=0.1.5",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
]
